added icons to settings

--- a/settings.html
+++ b/settings.html
@@ -11,6 +11,8 @@
     <script src="/src/scripts/dropDownMenu.js"></script>
     <script src="/src/scripts/mobileMenu.js"></script>
     <script src="/src/scripts/emailModalBox.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="/src/scripts/twimojiFix.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
@@ -85,7 +87,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p><label for="language-select">Language</label></p>
+                            <p>🌐 <label for="language-select">Language</label></p>
                             <div>
                                 <select class="button" id="language-select">
                                     <option value="en" selected>English</option>
@@ -101,7 +103,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Theme</p>
+                            <p>💡 Theme</p>
                             <div>
                                 <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option" checked>
                                 <label for="auto" class="auto button theme-label">Follow system</label>
@@ -114,7 +116,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>Color</p>
+                            <p>🎨 Color</p>
                             <div>
                                 <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
                                 <label for="purple" class="purple button">Purple</label>
@@ -140,7 +142,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p><label for="animations">Perform animations</label></p>
+                            <p>🏃‍➡️ <label for="animations">Perform animations</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
@@ -149,7 +151,7 @@
                             </div>
                         </li>
                         <li>
-                            <p><label for="update-every-sec">Update activity automatically</label></p>
+                            <p>📥 <label for="update-every-sec">Update activity automatically</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true"
@@ -159,7 +161,7 @@
                             </div>
                         </li>
                         <li>
-                            <p class="uppercaseTextLabel"><label for="uppercase">Use only uppercase fonts</label></p>
+                            <p class="uppercaseTextLabel">🔠 <label for="uppercase">Use only uppercase fonts</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="uppercase" name="uppercase" value="true">
