no longer reload

--- a/settings.html
+++ b/settings.html
@@ -182,7 +182,7 @@
 
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Settings saved successfully! Refresh to apply.
+                            Settings saved successfully!
                         </div>
                     </div>
                 </div>
