--- a/sv/settings.html
+++ b/sv/settings.html
@@ -176,7 +176,7 @@
 
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
-                            Dina inställningar sparades! Ladda om för att verkställa.
+                            Dina inställningar sparades!
                         </div>
                     </div>
                 </div>
