settings icons now clickable

--- a/settings.html
+++ b/settings.html
@@ -87,7 +87,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>🌐 <label for="language-select">Language</label></p>
+                            <p><label for="language-select">🌐 Language</label></p>
                             <div>
                                 <select class="button" id="language-select">
                                     <option value="en" selected>English</option>
@@ -142,7 +142,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>🏃‍➡️ <label for="animations">Perform animations</label></p>
+                            <p><label for="animations">🏃‍➡️ Perform animations</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
@@ -151,7 +151,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>📥 <label for="update-every-sec">Update activity automatically</label></p>
+                            <p><label for="update-every-sec">📥 Update activity automatically</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true"
@@ -161,7 +161,7 @@
                             </div>
                         </li>
                         <li>
-                            <p class="uppercaseTextLabel">🔠 <label for="uppercase">Use only uppercase fonts</label></p>
+                            <p class="uppercaseTextLabel"><label for="uppercase">🔠 Use only uppercase fonts</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="uppercase" name="uppercase" value="true">
