--- a/sv/settings.html
+++ b/sv/settings.html
@@ -87,7 +87,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>🌐 <label for="language-select">Språk</label></p>
+                            <p><label for="language-select">🌐 Språk</label></p>
                             <div>
                                 <select class="button" id="language-select">
                                     <option value="sv" selected>Svenska</option>
@@ -136,7 +136,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>🏃‍➡️ <label for="animations">Utför animationer</label></p>
+                            <p><label for="animations">🏃‍➡️ Utför animationer</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
@@ -145,7 +145,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>📥 <label for="update-every-sec">Uppdatera aktivitet automatiskt</label></p>
+                            <p><label for="update-every-sec">📥 Uppdatera aktivitet automatiskt</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true"
@@ -155,7 +155,7 @@
                             </div>
                         </li>
                         <li>
-                            <p class="uppercaseTextLabel">🔠 <label for="uppercase">Använd endast versal text</label></p>
+                            <p class="uppercaseTextLabel"><label for="uppercase">🔠 Använd endast versal text</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="uppercase" name="uppercase" value="true">
