--- a/settings.html
+++ b/settings.html
@@ -83,7 +83,7 @@
         <h1>Settings</h1>
         <form id="settings" action="/src/scripts/settings.js">
             <section class="settingGroup" id="content">
-                <p>Content that you see</p>
+                <p>Content you see</p>
                 <div class="setting">
                     <ul>
                         <li>
