improved discord more

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                                 <div id="discordInfo" class="discordInfo">
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
                                     height="128" alt="" src="src/images/icons/spinner.gif">
+                                    <h3 id="discordNameUser">aridan</h3>
                                     <p id="discordName">Loading</p>
                                 </div>
                                 <hr class="divider">
