--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:image" content="">
     <meta property="og:url" content="https://aridan.net">
     <link href="/src/styles/styles.css" rel="stylesheet">
+    <link href="/src/styles/lanyard.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
     <script src="/src/scripts/mobileMenu.js"></script>
