--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#161616">
     <title>Settings — actuallyaridan</title>
     <link href="/src/styles/styles.css" rel="stylesheet">
+    <link href="/src/styles/settings.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
     <script src="/src/scripts/mobileMenu.js"></script>
