--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <h2 class="projectName">Eurovision 2024</h2>
                     <p class="projectDesc">Check out my rankings for this years Eurovision Song Contest!</p>
                     <div class="projectStuff">
-                    <iframe class="youtubeVideo" width="560" height="315" src="https://www.youtube.com/embed/Uto5mZV2R9M?si=yoiUxjK-7FC3PnBi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p class="projectLink">📺<br><a rel="noopener" target="_blank" href="https://www.youtube.com/watch?v=Uto5mZV2R9M">Watch on YouTube</a></p>
                     </div>
                 </section>
                 <section class="project" id="currentdiscord">
