made text more consistent, bumped version

--- a/sv/contact.html
+++ b/sv/contact.html
@@ -104,7 +104,7 @@
                     <button type="button" onclick="emailToggle()" class="socialMedia red">Visa e-post adress</button>
                     <a class="socialMedia imessage" href="sms:adnan@aridan.net">Skicka ett iMessage</a>
                 </section>
-                <section>
+                <section class="titleUnderText">
                     <p class="subTitle">Vill du snacka på ett mindre formellt sätt? Jag är också på en massa sociala
                         medier! Ser
                         du en profil som inte är länkad här så är det inte jag.</p>
