--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
 
                     <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
                 </section>
-                <section>
+                <section class="titleUnderText">
                     <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social
                         media platforms too! Any account on any platform that isn't linked here is not me.</p>
                 </section>
