improved unset text

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <section class="project" id="currentdiscord">
                     <aside id="dcNameContainer">
                        <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
-                        <p id="statusWrapper" class="dcloading">Loading</p>
+                        <p id="statusWrapper" class="dcloading">Loading...</p>
                     </aside>
                     <div id="landyardDiscord">
                         <div id="loading">
@@ -163,7 +163,7 @@
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
                                     height="128" alt="" src="src/images/icons/spinner.gif">
                                     <h3 id="discordNameUser">aridan</h3>
-                                    <p id="discordName">Loading</p>
+                                    <p id="discordName">Loading...</p>
                                 </div>
                                 <hr class="divider">
                                 <div id="discordActivity">
@@ -174,11 +174,11 @@
                                             src="src/images/icons/spinner.gif">
                                     </div>
                                     <div id="discordActivityInfo">
-                                        <h3 id="activityName">Loading</h3>
-                                        <p id="activityDetails">Loading</p>
-                                        <p id="activityState" class="subTitle">Loading</p>
+                                        <h3 id="activityName">Loading...</h3>
+                                        <p id="activityDetails">Loading...</p>
+                                        <p id="activityState" class="subTitle">Loading...</p>
                                         <div id="timeremaning">
-                                            <p id="activityTime" class="subTitle">00:00</p>
+                                            <p id="activityTime" class="subTitle">-:-</p>
                                             <p id="remaining" class="hide subTitle"> remaining</p>
                                             <p id="elapsed" class="hide subTitle"> elapsed</p>
                                         </div>
