--- a/sv/index.html
+++ b/sv/index.html
@@ -112,7 +112,7 @@
                 <section class="project">
                     <aside id="dcNameContainer">
                        <h2 class="projectName" id="dcActivityHeaderName">Discord-aktivitet</h2>
-                        <p id="statusWrapper" class="dcloading">Laddar</p>
+                        <p id="statusWrapper" class="dcloading">Laddar...</p>
                     </aside>
                     <div id="landyardDiscord">
                         <div id="loading">
@@ -134,7 +134,7 @@
                                 <div id="discordInfo" class="discordInfo">
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
                                         height="128" alt="" src="/src/images/icons/spinner.gif">
-                                        <p id="discordName">Laddar</p>
+                                        <p id="discordName">Laddar...</p>
                                 </div>
                                 <hr class="divider">
                                 <div id="discordActivity">
@@ -143,11 +143,11 @@
                                         <img id="activityLogoSmall" draggable="false" width="32" height="32" alt="" src="/src/images/icons/spinner.gif">
                                     </div>
                                     <div id="discordActivityInfo">
-                                        <h3 id="activityName">Laddar</h3>
-                                        <p id="activityDetails">Laddar</p>
-                                        <p id="activityState" class="subTitle">Laddar</p>
+                                        <h3 id="activityName">Laddar...</h3>
+                                        <p id="activityDetails">Laddar...</p>
+                                        <p id="activityState" class="subTitle">Laddar...</p>
                                         <div id="timeremaning">
-                                            <p id="activityTime" class="subTitle">00:00</p>
+                                            <p id="activityTime" class="subTitle">-:-</p>
                                             <p id="remaining" class="hide subTitle"> återstår</p>
                                             <p id="elapsed" class="hide subTitle"> förflutet</p>
                                         </div>
