now using websockets

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                        <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
                         <p id="statusWrapper" class="dcloading">Loading...</p>
                     </aside>
-                    <div id="landyardDiscord">
+                    <div id="lanyardDiscord">
                         <div id="loading">
                             <div>
                                 <div id="loadingSpinner" class="lds-ring">
