--- a/sv/index.html
+++ b/sv/index.html
@@ -114,7 +114,7 @@
                        <h2 class="projectName" id="dcActivityHeaderName">Discord-aktivitet</h2>
                         <p id="statusWrapper" class="dcloading">Laddar...</p>
                     </aside>
-                    <div id="landyardDiscord">
+                    <div id="lanyardDiscord">
                         <div id="loading">
                             <div>
                                 <div id="loadingSpinner" class="lds-ring">
