--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <p class="errorMessage">❌</p>
                             <p class="errorMessage">Something went wrong.<br>Please try again later.</p>
                         </div>
-                        <div id="loadedLandyard">
+                        <div id="loadedLanyard">
                             <div id="discord">
                                 <div id="discordInfo" class="discordInfo">
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
