--- a/sv/index.html
+++ b/sv/index.html
@@ -129,7 +129,7 @@
                             <p class="errorMessage">❌</p>
                             <p class="errorMessage">Något gick snett.<br>Försök igen senare.</p>
                         </div>
-                        <div id="loadedLandyard">
+                        <div id="loadedLanyard">
                             <div id="discord">
                                 <div id="discordInfo" class="discordInfo">
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
