--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
         </div>
     </main>
     <footer class="footer">
-        <p>Any copyrighted material (like application icons or similar) displayed on this website is
-            owned by their respective copyright holder. <br>No images are stored directly on this website.<br>Contact adnan@aridan.net for takedowns of copyrighted material.
+        <p>Any copyrighted material (like application icons, album arts or similar) displayed on this website is
+            owned by their respective copyright holder. <br>Some images on this website are embedded from other websites.<br>Contact adnan@aridan.net for takedowns of potential copyrighted material.
         </p>
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
