--- a/sv/index.html
+++ b/sv/index.html
@@ -161,8 +161,8 @@
         </div>
     </main>
     <footer class="footer">
-        <p>Allt upphovsrättsskyddat material (som applikationsikoner och dylikt) som visas på den här
-            sidan ägs av respektive upphovsrättsinnehavare. <br>Inga bilder lagras direkt på denna webbplats.<br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat
+        <p>Allt upphovsrättsskyddat material (som applikationsikoner, albumomslag och dylikt) som visas på den här
+            sidan ägs av respektive upphovsrättsinnehavare. <br>Vissa bilder på denna webbplats är inbäddade från andra webbsidor.<br>Kontakta adnan@aridan.net för att ta ned eventuellt upphovsrättsskyddat
             material.</p>
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
