--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="/src/styles/styles.css" rel="stylesheet">
     <link href="/src/styles/lanyard.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
-    <script defer src="/src/scripts/lanyard.js"></script>
+     <script src="/src/scripts/scripts.js" type="application/javascript"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="/src/scripts/scripts.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
