--- a/sv/index.html
+++ b/sv/index.html
@@ -11,7 +11,7 @@
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/mobileMenu.js"></script>
     <script src="/src/scripts/emailModalBox.js"></script>
-    <script defer src="/src/scripts/lanyard.js"></script>
+     <script src="/src/scripts/scripts.js" type="application/javascript"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="/src/scripts/twimojiFix.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
