--- a/404.html
+++ b/404.html
@@ -8,10 +8,8 @@
     <title>404 (Not Found) — actuallyaridan</title>
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
-    <script src="/src/scripts/mobileMenu.js"></script>
-    <script src="/src/scripts/emailModalBox.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="/src/scripts/twimojiFix.js"></script>
+    <script src="/src/scripts/general.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
@@ -33,6 +31,7 @@
         <div>
             <div class="centererWrapper">
                 <section class="titleUnderText">
+                    <p id="emoji404">🧐</p>
                     <p class="subTitle">Luckily you didn't break the internet this time!</p>
                     <p class="subTitle">The page you're looking for cannot be found. If you entered the URL manually, please check
                         the URL and try again, otherwise the page was probably moved or deleted.</p>
