formatted and added json language files

--- a/settings.html
+++ b/settings.html
@@ -89,6 +89,8 @@
                                 <select class="button" id="language-select">
                                     <option value="en" selected>English</option>
                                     <option value="sv">Svenska</option>
+                                    <option value="bs" disabled>Bosanski</option>
+                                    <option value="sr" disabled>Српски</option>
                                 </select>
                             </div>
                         </li>
