--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -8,7 +8,8 @@
     <title>Erfarenhet — actuallyaridan</title>
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
+        crossorigin="anonymous"></script>
     <script src="/src/scripts/general.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
@@ -94,7 +95,7 @@
                 </section>
                 <p class="subTitleExp">Arbetslivserfarenhet</p>
                 <section class="project">
-                   <h2 class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</h2>
+                    <h2 class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</h2>
                     <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och
                         jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
                         Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt
@@ -114,7 +115,7 @@
 
                 <p class="subTitleExp">Utbildning</p>
                 <section class="project">
-                   <h2 class="projectName">Dator- och kommunikationsteknikselev på Teknikum </h2>
+                    <h2 class="projectName">Dator- och kommunikationsteknikselev på Teknikum </h2>
                     <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom
                         nätverkande när det gäller routing och switching.
                         Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera
@@ -140,4 +141,6 @@
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
-</body></html>
+</body>
+
+</html>
