--- a/sv/index.html
+++ b/sv/index.html
@@ -10,7 +10,8 @@
     <link href="/src/styles/lanyard.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script defer src="/src/scripts/lanyard.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
+        crossorigin="anonymous"></script>
     <script src="/src/scripts/general.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
@@ -89,7 +90,7 @@
                 <p class="subTitleExp">Om mig
                 </p>
                 <section class="project">
-                   <h2 class="projectName">Adnan Bukvic, även känd som @actuallyaridan</h2>
+                    <h2 class="projectName">Adnan Bukvic, även känd som @actuallyaridan</h2>
                     <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för
                         gamla saker. Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner
                         och nätverk ända sedan jag var ett barn.Jag är alltid uppdaterad om deras mjukvara
@@ -108,7 +109,7 @@
                 </section>
                 <section class="project">
                     <aside id="dcNameContainer">
-                       <h2 class="projectName" id="dcActivityHeaderName">Discord-aktivitet</h2>
+                        <h2 class="projectName" id="dcActivityHeaderName">Discord-aktivitet</h2>
                         <p id="statusWrapper" class="dcloading">Laddar...</p>
                     </aside>
                     <div id="lanyardDiscord">
@@ -129,15 +130,17 @@
                         <div id="loadedLanyard">
                             <div id="discord">
                                 <div id="discordInfo" class="discordInfo">
-                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128"
-                                        height="128" alt="" src="/src/images/icons/spinner.gif">
-                                        <p id="discordName">Laddar...</p>
+                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128" height="128"
+                                        alt="" src="/src/images/icons/spinner.gif">
+                                    <p id="discordName">Laddar...</p>
                                 </div>
                                 <hr class="divider">
                                 <div id="discordActivity">
                                     <div id="discordActivityImages">
-                                        <img id="activityLogoLarge" draggable="false" width="96" height="96" alt="" src="/src/images/icons/spinner.gif">
-                                        <img id="activityLogoSmall" draggable="false" width="32" height="32" alt="" src="/src/images/icons/spinner.gif">
+                                        <img id="activityLogoLarge" draggable="false" width="96" height="96" alt=""
+                                            src="/src/images/icons/spinner.gif">
+                                        <img id="activityLogoSmall" draggable="false" width="32" height="32" alt=""
+                                            src="/src/images/icons/spinner.gif">
                                     </div>
                                     <div id="discordActivityInfo">
                                         <h3 id="activityName">Laddar...</h3>
@@ -159,9 +162,12 @@
     </main>
     <footer class="footer">
         <p>Allt upphovsrättsskyddat material (som applikationsikoner, albumomslag och dylikt) som visas på den här
-            sidan ägs av respektive upphovsrättsinnehavare. <br>Vissa bilder på denna webbplats är inbäddade från andra webbsidor.<br>Kontakta adnan@aridan.net för att ta ned eventuellt upphovsrättsskyddat
+            sidan ägs av respektive upphovsrättsinnehavare. <br>Vissa bilder på denna webbplats är inbäddade från andra
+            webbsidor.<br>Kontakta adnan@aridan.net för att ta ned eventuellt upphovsrättsskyddat
             material.</p>
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
-</body></html>
+</body>
+
+</html>
