--- a/sv/projects.html
+++ b/sv/projects.html
@@ -11,7 +11,8 @@
     <meta name="author" content="Adnan Bukvic">
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
+        crossorigin="anonymous"></script>
     <script src="/src/scripts/general.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
@@ -94,7 +95,7 @@
                     </p>
                 </section>
                 <section class="project">
-                   <h2 class="projectName">Den där webbsidan (aridan.net)</h2>
+                    <h2 class="projectName">Den där webbsidan (aridan.net)</h2>
                     <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton
                         på sociala medier och liknande samt min arbetslivserfarenhet. Jag lär mig
                         ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor
@@ -115,7 +116,7 @@
                     </div>
                 </section>
                 <section class="project">
-                   <h2 class="projectName">Den svenska översättningen av OldTwitter</h2>
+                    <h2 class="projectName">Den svenska översättningen av OldTwitter</h2>
                     <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så
                         att X (tidigare Twitter) ser ut som Twitter från 2016/2018. Jag behöver aktivt
                         översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra
@@ -135,7 +136,7 @@
                     </div>
                 </section>
                 <section class="project">
-                   <h2 class="projectName">Diverse iPods</h2>
+                    <h2 class="projectName">Diverse iPods</h2>
                     <p class="projectDesc">Jag gillar att modifiera äldre iPods. På vissa iPod har jag
                         lagt en genomskinlig framsida samt klickhjul på.Dessutom så byter jag ut
                         batteriet på dem mot en större variant och byter ut hårddiskarna med ett SD
@@ -147,7 +148,7 @@
                     </div>
                 </section>
                 <section class="project">
-                   <h2 class="projectName">"Hackintoshing"</h2>
+                    <h2 class="projectName">"Hackintoshing"</h2>
                     <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple
                         hårdvara. Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag
                         lärde mig massor om hur Apples klientoperativsystem fungerar. Det var superkul,
@@ -165,4 +166,6 @@
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
-</body></html>
+</body>
+
+</html>
