--- a/sv/settings.html
+++ b/sv/settings.html
@@ -9,7 +9,8 @@
     <link href="/src/styles/styles.css" rel="stylesheet">
     <link href="/src/styles/settings.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
+        crossorigin="anonymous"></script>
     <script src="/src/scripts/general.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
@@ -89,6 +90,8 @@
                                 <select class="button" id="language-select">
                                     <option value="sv" selected>Svenska</option>
                                     <option value="en">English</option>
+                                    <option value="bs" disabled>Bosanski</option>
+                                    <option value="sr" disabled>Српски</option>
                                 </select>
                             </div>
                         </li>
@@ -142,7 +145,8 @@
                             </div>
                         </li>
                         <li>
-                            <p class="uppercaseTextLabel"><label for="uppercase">🔠 Använd endast versal text</label></p>
+                            <p class="uppercaseTextLabel"><label for="uppercase">🔠 Använd endast versal text</label>
+                            </p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="uppercase" name="uppercase" value="true">
@@ -178,4 +182,6 @@
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
-</body></html>
+</body>
+
+</html>
