--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
         crossorigin="anonymous"></script>
     <script src="/src/scripts/general.js"></script>
+    <script src="/src/scripts/notFound.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
@@ -32,7 +33,7 @@
         <div>
             <div class="centererWrapper">
                 <section class="titleUnderText">
-                    <p id="emoji404">🧐</p>
+                    <p id="emojiNotFound"></p>
                     <p class="subTitle">Luckily you didn't break the internet this time!</p>
                     <p class="subTitle">The page you're looking for cannot be found. If you entered the URL manually,
                         please check
