--- a/sv/settings.html
+++ b/sv/settings.html
@@ -90,6 +90,7 @@
                                 <select class="button" id="language-select">
                                     <option value="sv" selected>Svenska</option>
                                     <option value="en">English</option>
+                                    <option value="hr" disabled>Hrvatski</option>
                                     <option value="bs" disabled>Bosanski</option>
                                     <option value="sr" disabled>Српски</option>
                                 </select>
